@@ -1,3 +1,10 @@
+2009-01-02  Kevin B. Kenny <kennykb@acm.org>:
+
+	* library/clock.tcl (tcl::clock::add): Fixed error message formatting
+	in the case where [clock add] is presented with a bad switch.
+	* tests/clock.test (clock-65.1) Added a test case for the above
+	problem [Bug 2481670].
+	
 2009-01-02  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/tcl.m4 (SC_CONFIG_CFLAGS): Force the use of the compatibility
